# llm-security

./: .gitignore  API_SETUP_GUIDE.md  MULTI_TEAM_INTEGRATION_DISCUSSION.md  MULTI_TEAM_INTEGRATION_GUIDE.md  NEW_USER_SETUP_SUMMARY.txt  README.md  README_policy_examples.md  SETUP_README.md  WHAT_WAS_CREATED.txt  current_working_requirements.txt  install_tech_stack.sh  pyproject.toml  quick-setup.sh  requirements-complete.txt
ai_privacy_firewall_team_c/: ENHANCED_INTEGRATION_SUMMARY.md  ENVIRONMENT_COLLISION_RESOLUTION_SUCCESS.md  GRAPHITI_INTEGRATION_SUMMARY.md  INTEGRATION_TEST_RESULTS.md  NEO4J_FALLBACK_EXPLANATION.md  README.md  TEAM_A_C_INTEGRATION_SUMMARY.md  TEAM_A_INTEGRATION_FORMAT.md  TEAM_B_INTEGRATION_SPEC.md  TIMEZONE_TIMESTAMP_ENHANCEMENT.md  WHY_GRAPHITI_NEEDS_OPENAI_API_KEY.md  check_org_structure.py  comprehensive_integration_demo.py  comprehensive_test.py  demo_integration_scenarios.py  demo_team_a_c_integration.py  enhanced_bridge_demo.py  enhanced_privacy_api_service.py  full_integration_test.py  integration_demo.py  integration_demo_test.py  interactive_test.py  main.py  multi_team_integration_test.py  pure_python_demo.py  pyproject.toml  quick_integration_test.py  security_fixed_integration_demo.py  team_a_c_integrated_system.py  team_c_responses.md  test_enhanced_timestamps_fixed.py  test_team_a_c_integration.py  test_team_a_integration.py
ai_privacy_firewall_team_c/api/: __init__.py  privacy_api_service.py
ai_privacy_firewall_team_c/core/: enricher.py  evaluator.py  graph_adapter.py  graphiti_manager.py  logging_config.py  policy_engine.py  tuples.py
ai_privacy_firewall_team_c/docs/: system_architecture.py
ai_privacy_firewall_team_c/graphiti_core/: nodes.py
ai_privacy_firewall_team_c/integration/: enhanced_graphiti_privacy_bridge.py  enhanced_graphiti_privacy_bridge_backup.py  graphiti_privacy_bridge.py  groq_llm_client.py  team_a_models.py  team_b_integration.py  timezone_utils.py
ai_privacy_firewall_team_c/mocks/: incidents.yaml  rules.yaml
ai_privacy_firewall_team_c/ontology/: privacy_ontology.py  security_fixed_privacy_ontology.py
groq/: drying_shirts.prompt  (+1 more)
privacy_firewall_integration/: .env.example  INTEGRATION_GUIDE.md  POLICY_CATALOG.md  QUICK_START.md  README.md  __init__.py  add_oncall_fields.py  create_package.sh  demo_final.py  docker-compose.yml  pyproject.toml  query_database.py  requirements.txt  run_api.py  test_api_complete.py  test_context_enrichment.py  test_enrichment_comprehensive.py  test_privacy_firewall.py  test_privacy_firewall_async.py
temporal-framework-feature-temporal-context/: .env.example  .gitignore  Dockerfile  LICENSE  README.md  STATUS.md  TEMPORAL_ROLE_INHERITANCE_COMPLETE.md  WEEK2_ENHANCED_VALIDATION.md  main.py  pyproject.toml  requirements.txt
(+110 files in other folders)
