[project]
name = "ai-privacy-firewall-team-c"
version = "0.1.0"
description = "Team C AI Privacy Firewall with Groq LLM and Neo4j Integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "diskcache>=5.6.3",
    "fastapi>=0.118.0",
    "httpx>=0.28.1",
    "neo4j>=6.0.2",
    "numpy>=2.3.3",
    "openai>=2.0.1",
    "owlready2>=0.48",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "tenacity>=9.1.2",
    "uvicorn>=0.37.0",
]

[project.scripts]
start-api = "uvicorn api.privacy_api_service:app --host 0.0.0.0 --port 8002"
test-system = "python comprehensive_test.py"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
