[project]
name = "team-b-org-chart"
version = "0.1.0"
description = "Organizational Chart Integration for AI Privacy Firewall - Team B"
authors = [
    {name = "Aithel Christo Sunil", email = "christoaithel@gmail.com"},
    {name = "Minha K M"}
]
requires-python = ">=3.10"
dependencies = [
    "graphiti-core>=0.3.0",
    "neo4j>=5.0.0",
    "python-dotenv>=1.0.0",
    "deal>=4.24.0",
    "PyYAML>=6.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "faker>=19.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --cov=core --cov-report=html --cov-report=term"

[tool.coverage.run]
source = ["core"]
omit = ["*/tests/*", "*/__pycache__/*"]
